--- a/package.json
+++ b/package.json
@@ -14,20 +14,25 @@
     "react-native": "0.74.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "@babel/preset-env": "^7.20.0",
+    "@babel/core": "^7.24.7",
+    "@babel/preset-env": "^7.24.7",
+    "@babel/preset-react": "^7.24.7",
+    "@babel/preset-typescript": "^7.24.7",
     "@babel/runtime": "^7.20.0",
+    "@jest/globals": "^29.7.0",
     "@react-native/babel-preset": "0.74.84",
     "@react-native/eslint-config": "0.74.84",
     "@react-native/metro-config": "0.74.84",
     "@react-native/typescript-config": "0.74.84",
+    "@testing-library/jest-native": "^5.4.3",
+    "@testing-library/react-native": "^12.5.1",
     "@types/react": "^18.2.6",
-    "@types/react-test-renderer": "^18.0.0",
-    "babel-jest": "^29.6.3",
+    "babel-jest": "^29.7.0",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
+    "maestro": "^2.1.1",
     "prettier": "2.8.8",
-    "react-test-renderer": "18.2.0",
+    "ts-jest": "^29.1.5",
     "typescript": "5.0.4"
   },
   "engines": {
