--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
     "maestro": "^2.1.1",
+    "metro-react-native-babel-preset": "^0.77.0",
     "prettier": "2.8.8",
+    "react-test-renderer": "^18.3.1",
     "ts-jest": "^29.1.5",
     "typescript": "5.0.4"
   },
