--- a/package.json
+++ b/package.json
@@ -11,30 +11,23 @@
   },
   "dependencies": {
     "react": "18.2.0",
-    "react-native": "0.74.2"
+    "react-native": "0.74.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.24.7",
-    "@babel/preset-env": "^7.24.7",
-    "@babel/preset-react": "^7.24.7",
-    "@babel/preset-typescript": "^7.24.7",
+    "@babel/core": "^7.20.0",
+    "@babel/preset-env": "^7.20.0",
     "@babel/runtime": "^7.20.0",
-    "@jest/globals": "^29.7.0",
-    "@react-native/babel-preset": "0.74.84",
-    "@react-native/eslint-config": "0.74.84",
-    "@react-native/metro-config": "0.74.84",
-    "@react-native/typescript-config": "0.74.84",
-    "@testing-library/jest-native": "^5.4.3",
-    "@testing-library/react-native": "^12.5.1",
+    "@react-native/babel-preset": "0.74.85",
+    "@react-native/eslint-config": "0.74.85",
+    "@react-native/metro-config": "0.74.85",
+    "@react-native/typescript-config": "0.74.85",
     "@types/react": "^18.2.6",
-    "babel-jest": "^29.7.0",
+    "@types/react-test-renderer": "^18.0.0",
+    "babel-jest": "^29.6.3",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
-    "maestro": "^2.1.1",
-    "metro-react-native-babel-preset": "^0.77.0",
     "prettier": "2.8.8",
-    "react-test-renderer": "^18.3.1",
-    "ts-jest": "^29.1.5",
+    "react-test-renderer": "18.2.0",
     "typescript": "5.0.4"
   },
   "engines": {
